tests/check/illegal_while.co
// RUN: not choreo %s 2>&1 | FileCheck %s


__co__ void foo(int aa, bool bb) {
  bool cc = true;
  parallel p by 3 {
    shared event a, b[2];
    while (a);
    while (b);
    while (a && b[0]);
    while (a && bb > 0); // illegal
    while (2 > 1); // legal now
    while (cc); // legal now
  }
}

// CHECK: in operation "&&": unable to apply to the types (shared event vs. bool).
// CHECK: error: requires an event predication expression but got 'unknown'.
